--- a/Main_SFT_RL.ipynb
+++ b/Main_SFT_RL.ipynb
@@ -17,6 +17,21 @@
     "import numpy as np\n",
     "from typing import List, Dict, Any\n",
     "\n",
+    "import random\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "from transformers import (\n",
+    "    AutoTokenizer, AutoModelForCausalLM, AdamW\n",
+    ")\n",
+    "from accelerate import Accelerator\n",
+    "import random\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "from transformers import (\n",
+    "    AutoTokenizer, AutoModelForCausalLM, AdamW\n",
+    ")\n",
+    "from accelerate import Accelerator\n",
+    "\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "from peft import LoraConfig\n",
     "from trl import GRPOConfig, GRPOTrainer\n",
@@ -661,23 +676,28 @@
     "    BATCH_SIZE = 2\n",
     "    LR = 1e-5\n",
     "    MAX_LENGTH = 512\n",
-    "\n",
-    "    EVAL_EVERY = 1000   # validate every 1000 training steps\n",
+    "    EVAL_EVERY = 1000\n",
     "    PATIENCE = 3\n",
     "\n",
+    "    # Initialize Accelerator\n",
+    "    accelerator = Accelerator()\n",
+    "    device = accelerator.device\n",
+    "\n",
+    "    # Load dataset\n",
     "    train_data, val_data = load_train_val_data(JSON_DATASET_PATH, test_size=0.01)\n",
     "    train_dataset = OfflineImitationDataset(train_data)\n",
-    "    val_dataset   = OfflineImitationDataset(val_data)\n",
+    "    val_dataset = OfflineImitationDataset(val_data)\n",
     "\n",
+    "    # Load model & tokenizer\n",
     "    tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME)\n",
     "    tokenizer.pad_token = tokenizer.eos_token\n",
     "    model = AutoModelForCausalLM.from_pretrained(MODEL_NAME)\n",
-    "    #model = AutoModelForCausalLM.from_pretrained(MODEL_NAME, device_map=\"auto\", load_in_8bit=True)\n",
     "\n",
+    "    # Move model to Accelerator (multi-GPU, FP16 support)\n",
     "    model.config.use_cache = False\n",
     "    model.train()\n",
-    "    model.cuda()\n",
     "\n",
+    "    # Dataloader\n",
     "    train_loader = DataLoader(\n",
     "        train_dataset,\n",
     "        batch_size=BATCH_SIZE,\n",
@@ -691,11 +711,14 @@
     "        collate_fn=lambda b: offline_collate_fn(b, tokenizer, MAX_LENGTH)\n",
     "    )\n",
     "\n",
-    "    total_steps_in_epoch = len(train_loader)\n",
-    "    print(\"total_steps_in_epoch\", total_steps_in_epoch)\n",
-    "\n",
     "    optimizer = AdamW(model.parameters(), lr=LR)\n",
     "\n",
+    "    # Prepare everything for Accelerator\n",
+    "    model, optimizer, train_loader, val_loader = accelerator.prepare(\n",
+    "        model, optimizer, train_loader, val_loader\n",
+    "    )\n",
+    "\n",
+    "    # Training Variables\n",
     "    global_step = 0\n",
     "    best_val_loss = float(\"inf\")\n",
     "    no_improvement_count = 0\n",
@@ -709,34 +732,33 @@
     "        for step_idx, batch in enumerate(train_loader):\n",
     "            global_step += 1\n",
     "\n",
-    "            # Forward/backward pass\n",
-    "            for k, v in batch.items():\n",
-    "                batch[k] = v.cuda()\n",
-    "            outputs = model(**batch)\n",
-    "            loss = outputs.loss\n",
+    "            # Move batch to the correct device\n",
+    "            with accelerator.accumulate(model):\n",
+    "                outputs = model(**batch)\n",
+    "                loss = outputs.loss\n",
     "\n",
-    "            optimizer.zero_grad()\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
+    "                # Backpropagation\n",
+    "                optimizer.zero_grad()\n",
+    "                accelerator.backward(loss)\n",
+    "                optimizer.step()\n",
     "\n",
     "            # Print training loss every 10 steps\n",
     "            if step_idx % 10 == 0:\n",
     "                print(f\"Epoch {epoch}, step {step_idx}, train loss={loss.item():.4f}\")\n",
     "\n",
-    "            # Generate a sample output every 100 steps\n",
-    "            if step_idx % 500 == 0:\n",
-    "                # pick a random example from val_data\n",
-    "                if len(val_data) > 0:\n",
-    "                    sample = random.choice(val_data)\n",
-    "                    gen_step = generate_proof_step(model, tokenizer, sample[\"statement\"], sample[\"state\"])\n",
-    "                    print(\"-\"*50)\n",
-    "                    print(\"Sample statement+state:\\n\", sample[\"statement\"], sample[\"state\"])\n",
-    "                    print(\"\\n\\nGenerated step:\\n\", gen_step)\n",
-    "                    print(\"\\n\\nReference step:\\n\", sample[\"step\"])\n",
-    "                    print(\"-\"*50)\n",
+    "            # Generate a sample output every 500 steps\n",
+    "            if step_idx % 500 == 0 and len(val_data) > 0:\n",
+    "                sample = random.choice(val_data)\n",
+    "                gen_step = generate_proof_step(model, tokenizer, sample[\"statement\"], sample[\"state\"])\n",
+    "                print(\"-\"*50)\n",
+    "                print(f\"Sample statement+state:\\n {sample['statement']} {sample['state']}\")\n",
+    "                print(\"\\n\\nGenerated step:\\n\", gen_step)\n",
+    "                print(\"\\n\\nReference step:\\n\", sample[\"step\"])\n",
+    "                print(\"-\"*50)\n",
     "\n",
     "            # Validation after every EVAL_EVERY steps\n",
     "            if global_step % EVAL_EVERY == 0:\n",
+    "                model.eval()\n",
     "                val_loss = evaluate_validation_loss(model, val_loader)\n",
     "                print(f\"[Global Step {global_step}] Interim val_loss={val_loss:.4f}\")\n",
     "\n",
@@ -744,7 +766,7 @@
     "                    best_val_loss = val_loss\n",
     "                    no_improvement_count = 0\n",
     "                    print(\"  (New best val_loss!)\")\n",
-    "                    model.save_pretrained(\"checkpoint_best\") #Optional\n",
+    "                    accelerator.unwrap_model(model).save_pretrained(\"checkpoint_best\")\n",
     "                else:\n",
     "                    no_improvement_count += 1\n",
     "                    print(f\"  (No improvement. Count={no_improvement_count})\")\n",
@@ -752,9 +774,11 @@
     "                        print(\"Early stopping triggered (no val improvement).\")\n",
     "                        stop_early = True\n",
     "                        break\n",
+    "                model.train()\n",
     "\n",
-    "        # End of epoch => final validation & optional generation\n",
+    "        # End of epoch => Final validation\n",
     "        if not stop_early:\n",
+    "            model.eval()\n",
     "            val_loss = evaluate_validation_loss(model, val_loader)\n",
     "            print(f\"Epoch {epoch}, validation loss={val_loss:.4f}\")\n",
     "\n",
@@ -764,11 +788,15 @@
     "                print(\"Sample statement+state:\\n\", sample[\"statement\"], sample[\"state\"])\n",
     "                print(\"Generated step:\\n\", gen_step)\n",
     "                print(\"Reference step:\\n\", sample[\"step\"])\n",
+    "            model.train()\n",
     "\n",
-    "    # Save final\n",
-    "    model.save_pretrained(OFFLINE_SAVE_DIR)\n",
+    "    # Save final model\n",
+    "    accelerator.unwrap_model(model).save_pretrained(OFFLINE_SAVE_DIR)\n",
     "    tokenizer.save_pretrained(OFFLINE_SAVE_DIR)\n",
-    "    print(f\"Offline training done. Model saved to: {OFFLINE_SAVE_DIR}\")\n"
+    "    print(f\"Offline training done. Model saved to: {OFFLINE_SAVE_DIR}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   },
   {
@@ -791,52 +819,52 @@
    "source": [
     "def main_grpo():\n",
     "    \"\"\"\n",
-    "    This RL function uses TRL’s GRPO, but also:\n",
-    "      - splits training into smaller increments\n",
-    "      - prints sample outputs from the model every 100 steps\n",
-    "      - does standard early stopping based on reward\n",
-    "      - runs an 'evaluate_rl' function on a val set\n",
+    "    Multi-GPU RL function using TRL’s GRPO with:\n",
+    "      - Chunked incremental training\n",
+    "      - Sample output printing every 100 steps\n",
+    "      - Standard early stopping based on reward\n",
+    "      - RL validation on a held-out set\n",
     "    \"\"\"\n",
-    "    CUDA_LAUNCH_BLOCKING=1\n",
     "    JSON_DATASET_PATH = \"MagnusData/deduplicated_dataset.json\"\n",
     "    OFFLINE_CKPT = \"checkpoint_best\"  \n",
     "    RL_SAVE_DIR = \"outputs/Qwen-Theorem-GRPO\"\n",
     "\n",
-    "    # Early stopping & eval intervals\n",
-    "    EVAL_EVERY = 1000   # every N RL steps, do a reward-based validation\n",
+    "    # Training settings\n",
+    "    EVAL_EVERY = 1000   \n",
     "    PATIENCE = 3       \n",
     "    MAX_GLOBAL_STEPS = 10000\n",
     "    CHUNK_SIZE = 100    \n",
     "\n",
+    "    # Initialize accelerator for multi-GPU support\n",
+    "    accelerator = Accelerator()\n",
+    "    device = accelerator.device\n",
+    "\n",
+    "    # Setup Isabelle Checker\n",
     "    checker = Checker(\n",
     "        working_dir='/home/balaji/Desktop/Theorem_Proving/Isabelle2022/src/HOL/Examples',\n",
     "        isa_path='/home/balaji/Desktop/Theorem_Proving/Isabelle2022',\n",
     "        theory_file='/home/balaji/Desktop/Theorem_Proving/Isabelle2022/src/HOL/Examples/Interactive.thy',\n",
     "        port=9000\n",
     "    )\n",
-    "    # 1) Train/val split for RL\n",
+    "\n",
+    "    # Load dataset & split\n",
     "    train_data, val_data = load_train_val_data(JSON_DATASET_PATH, test_size=0.1)\n",
     "    print(f\"Train size: {len(train_data)}, Val size: {len(val_data)}\")\n",
     "\n",
-    "    # Build TRL conversation data\n",
     "    train_trl_data = build_trl_format(train_data)\n",
     "    val_trl_data   = build_trl_format(val_data)\n",
     "\n",
-    "    # 2) Load your offline checkpoint\n",
+    "    # Load tokenizer & model\n",
     "    tokenizer = AutoTokenizer.from_pretrained(\"deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B\")\n",
-    "    tokenizer.pad_token = tokenizer.eos_token #Uncomment this and comment the 3 lines below if issues come up\n",
+    "    tokenizer.pad_token = tokenizer.eos_token\n",
+    "\n",
     "    model = AutoModelForCausalLM.from_pretrained(\n",
     "        OFFLINE_CKPT,\n",
     "        torch_dtype=torch.bfloat16,\n",
-    "        device_map=\"auto\"\n",
+    "        device_map=\"auto\"  # Enables multi-GPU training\n",
     "    )\n",
     "\n",
-    "    #these 3 lines \n",
-    "    #tokenizer.add_special_tokens({\"pad_token\": \"<PAD>\"}) \n",
-    "    #model.resize_token_embeddings(len(tokenizer))\n",
-    "    #tokenizer.pad_token = \"<PAD>\"\n",
-    "    \n",
-    "    # If you want LoRA\n",
+    "    # LoRA configuration (optional)\n",
     "    peft_config = LoraConfig(\n",
     "        r=4,\n",
     "        lora_alpha=16,\n",
@@ -849,6 +877,7 @@
     "    def checker_reward(prompts, completions, answer, **kwargs):\n",
     "        return checker_reward_func(prompts, completions, answer, checker=checker)\n",
     "\n",
+    "    # Training arguments\n",
     "    training_args = GRPOConfig(\n",
     "        output_dir=RL_SAVE_DIR,\n",
     "        run_name=\"Qwen-GRPO-theorems\",\n",
@@ -865,42 +894,34 @@
     "        num_generations=1,\n",
     "        max_prompt_length=512,\n",
     "        max_completion_length=512,\n",
-    "        num_train_epochs=1,  # we will do repeated small chunks\n",
+    "        num_train_epochs=1,\n",
     "        save_steps=9999999,\n",
     "        max_grad_norm=0.1,\n",
-    "        report_to=\"wandb\",   # logs to wandb if configured\n",
+    "        report_to=\"wandb\",\n",
     "        log_on_each_node=False,\n",
     "    )\n",
     "\n",
-    "    from trl import GRPOTrainer\n",
+    "    # Initialize Trainer with Accelerate\n",
     "    trainer = GRPOTrainer(\n",
     "        model=model,\n",
     "        processing_class=tokenizer,\n",
     "        reward_funcs=[format_reward_func, checker_reward],\n",
     "        args=training_args,\n",
     "        train_dataset=train_trl_data,\n",
-    "        #peft_config=peft_config,\n",
     "    )\n",
     "\n",
-    "    def evaluate_rl(trainer, val_data_subset, num_samples=200):\n",
-    "        subset = random.sample(val_data_subset, min(num_samples, len(val_data_subset)))\n",
-    "        prompts = [s[\"prompt\"] for s in subset]\n",
-    "        gold_ans = [s[\"answer\"] for s in subset]\n",
-    "        completions = trainer.generate(prompts)\n",
-    "\n",
-    "        c_reward = checker_reward(prompts, completions, gold_ans)\n",
-    "        f_reward = format_reward_func(completions)\n",
-    "        total_reward = [r1 + r2 for (r1, r2) in zip(c_reward, f_reward)]\n",
-    "        avg_reward = sum(total_reward) / len(total_reward) if len(total_reward) > 0 else 0.0\n",
-    "        return avg_reward\n",
+    "    # Prepare trainer for multi-GPU training\n",
+    "    trainer.model, trainer.optimizer = accelerator.prepare(\n",
+    "        trainer.model, trainer.optimizer\n",
+    "    )\n",
     "\n",
     "    best_val_reward = -9999\n",
     "    no_improvement_count = 0\n",
     "    global_step = 0\n",
     "    stop_early = False\n",
     "\n",
-    "    # 3) Custom RL loop: repeated mini-chunks\n",
-    "    while (not stop_early) and (global_step < MAX_GLOBAL_STEPS):\n",
+    "    # RL Training Loop\n",
+    "    while not stop_early and global_step < MAX_GLOBAL_STEPS:\n",
     "        steps_to_run = min(CHUNK_SIZE, MAX_GLOBAL_STEPS - global_step)\n",
     "        trainer.args.max_steps = steps_to_run\n",
     "        trainer.args.num_train_epochs = 1\n",
@@ -910,36 +931,36 @@
     "        global_step += steps_to_run\n",
     "        print(f\"Finished a block of {steps_to_run} RL steps, global_step={global_step}\")\n",
     "\n",
-    "        # ---- Generate a sample output every chunk (like in offline code)\n",
-    "        # pick a random val example\n",
+    "        # ---- Generate a sample output every chunk\n",
     "        if len(val_data) > 0:\n",
     "            sample = random.choice(val_data)\n",
-    "            # Build the \"prompt\" as in TRL's format: system + user\n",
     "            prompt = [\n",
     "                {\"role\": \"system\", \"content\": \"Prove the following theorem.\"},\n",
     "                {\"role\": \"user\", \"content\": sample[\"statement\"] + \"\\n\\n\" + sample[\"state\"]}\n",
     "            ]\n",
-    "        \n",
-    "            # trainer.generate expects a list of prompts\n",
-    "            completions = trainer.generate([prompt], max_new_tokens=50, do_sample=False, top_p=0.9, temperature=0.8)\n",
-    "            # completions is a list of list-of-messages, so completions[0][0]['content'] is the text\n",
+    "\n",
+    "            completions = trainer.generate(\n",
+    "                [prompt], max_new_tokens=50, do_sample=False, top_p=0.9, temperature=0.8\n",
+    "            )\n",
     "            gen_text = completions[0][0]['content'] if completions else \"\"\n",
+    "\n",
     "            print(\"-\"*50)\n",
     "            print(\"Sample statement+state:\\n\", sample[\"statement\"], sample[\"state\"])\n",
     "            print(\"RL-generated step:\\n\", gen_text)\n",
     "            print(\"Reference step:\\n\", sample[\"step\"])\n",
     "            print(\"-\"*50)\n",
     "\n",
+    "        # RL Validation\n",
     "        if global_step % EVAL_EVERY == 0:\n",
     "            val_reward = evaluate_rl(trainer, val_trl_data, num_samples=200)\n",
     "            print(f\"[RL Validation] global_step={global_step}, val_reward={val_reward:.4f}\")\n",
     "\n",
-    "            # early stopping\n",
+    "            # Early stopping logic\n",
     "            if val_reward > best_val_reward:\n",
     "                best_val_reward = val_reward\n",
     "                no_improvement_count = 0\n",
     "                print(\"  (New best RL reward!)\")\n",
-    "                trainer.save_model(\"checkpoint_best_rl\")\n",
+    "                accelerator.unwrap_model(trainer.model).save_pretrained(\"checkpoint_best_rl\")\n",
     "            else:\n",
     "                no_improvement_count += 1\n",
     "                print(f\"  (No improvement. Count={no_improvement_count})\")\n",
@@ -948,8 +969,11 @@
     "                    stop_early = True\n",
     "\n",
     "    print(f\"RL training complete at global_step={global_step}. Best val_reward={best_val_reward:.4f}\")\n",
-    "    trainer.save_model(RL_SAVE_DIR)\n",
-    "    print(f\"RL final model saved in: {RL_SAVE_DIR}\")\n"
+    "    accelerator.unwrap_model(trainer.model).save_pretrained(RL_SAVE_DIR)\n",
+    "    print(f\"RL final model saved in: {RL_SAVE_DIR}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main_grpo()\n"
    ]
   },
   {
