Vanilla RL runs

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,40 +179,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "sys.path.append('../')\n",
-    "os.environ['PISA_PATH'] = '/home/balaji/Desktop/Nesy_Contd/Portal-to-ISAbelle/src/main/python'\n",
+    "os.environ['PISA_PATH'] = '/home/siai/Portal-to-ISAbelle/src/main/python'\n",
+    "\n",
+    "import dsp_utils\n",
     "\n",
     "checker = Checker(\n",
-    "    working_dir='/home/balaji/Desktop/Isabelle2022/src/HOL/Examples',\n",
-    "    isa_path='/home/balaji/Desktop/Isabelle2022',\n",
-    "    theory_file='/home/balaji/Desktop/Isabelle2022/src/HOL/Examples/Interactive.thy',\n",
+    "    working_dir='/home/siai/Isabelle2022/src/HOL/Examples',\n",
+    "    isa_path='/home/siai/Isabelle2022',\n",
+    "    theory_file='/home/siai/Isabelle2022/src/HOL/Examples/Interactive.thy',\n",
     "    port=9000\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initializing Isabelle...\n",
-      "Isa Path: /home/balaji/Desktop/Isabelle2022\n",
-      "Working Directory: /home/balaji/Desktop/Isabelle2022/src/HOL/Examples\n",
-      "Theory File: /home/balaji/Desktop/Isabelle2022/src/HOL/Examples/Interactive.thy\n",
       "----------Path to Isabelle source----------\n",
-      "/home/balaji/Desktop/Isabelle2022\n",
+      "/home/siai/Isabelle2022\n",
       "----------Path to Isabelle working directory----------\n",
-      "/home/balaji/Desktop/Isabelle2022/src/HOL/Examples\n",
+      "/home/siai/Isabelle2022/src/HOL/Examples\n",
       "----------Path to Isabelle theory file----------\n",
-      "/home/balaji/Desktop/Isabelle2022/src/HOL/Examples/Interactive.thy\n",
+      "/home/siai/Isabelle2022/src/HOL/Examples/Interactive.thy\n",
       "\n",
       "==== Success: True\n",
       "--- Complete proof:\n",
@@ -259,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
