--- a/Main_SFT_RL_v2.ipynb
+++ b/Main_SFT_RL_v2.ipynb
@@ -147,7 +147,7 @@
     "    def __init__(self, working_dir, isa_path, theory_file, port=9000):\n",
     "        sys.path.append(os.environ['PISA_PATH'])\n",
     "        try:\n",
-    "            from pisa_client import initialise_env\n",
+    "            from pisa_client import initialise_env # type: ignore\n",
     "            self.initialise_env = initialise_env\n",
     "        except:\n",
     "            print(\"Set $PISA_PATH to /yourpath/to/Portal-to-ISAbelle/src/main/python\")\n",
