--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "\n",
     "    Finally, it replaces `sledgehammer` with a call to `normalhammer`.\n",
     "    \"\"\"\n",
-    "    def __init__(self, working_dir, isa_path, theory_file, port=9000):\n",
+    "    def __init__(self, working_dir, isa_path, theory_file_path, port=9000):\n",
     "        sys.path.append(os.environ.get('PISA_PATH', ''))\n",
     "        try:\n",
     "            from pisa_client import initialise_env\n",
@@ -42,7 +42,7 @@
     "\n",
     "        self.working_dir = working_dir\n",
     "        self.isa_path = isa_path\n",
-    "        self.theory_file = theory_file\n",
+    "        self.theory_file_path = theory_file_path\n",
     "        self.port = port\n",
     "\n",
     "    def _initialize(self):\n",
@@ -50,7 +50,7 @@
     "        env = self.initialise_env(\n",
     "            self.port,\n",
     "            isa_path=self.isa_path,\n",
-    "            theory_file=self.theory_file,\n",
+    "            theory_file_path=self.theory_file_path,\n",
     "            working_directory=self.working_dir\n",
     "        )\n",
     "        return env\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,26 +191,20 @@
     "checker = Checker(\n",
     "    working_dir='/home/siai/Isabelle2022/src/HOL/Examples',\n",
     "    isa_path='/home/siai/Isabelle2022',\n",
-    "    theory_file='/home/siai/Isabelle2022/src/HOL/Examples/Interactive.thy',\n",
+    "    theory_file_path='/home/siai/Isabelle2022/src/HOL/Examples/Interactive.thy',\n",
     "    port=9000\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----------Path to Isabelle source----------\n",
-      "/home/siai/Isabelle2022\n",
-      "----------Path to Isabelle working directory----------\n",
-      "/home/siai/Isabelle2022/src/HOL/Examples\n",
-      "----------Path to Isabelle theory file----------\n",
-      "/home/siai/Isabelle2022/src/HOL/Examples/Interactive.thy\n",
       "\n",
       "==== Success: True\n",
       "--- Complete proof:\n",
@@ -245,6 +239,100 @@
     "\"\"\"\n",
     "\n",
     "result = checker.check(theorem_and_sledgehammer_proof)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==== Success: False\n",
+      "--- Complete proof:\n",
+      "\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "theorem_and_sledgehammer_proof = \"\"\"\n",
+    "\n",
+    "lemma \"alpha (trans_r R as) = {b | there is a in as such that (a, b) in trans_r as}\"\n",
+    "proof-\n",
+    "  let ?as = \"as\";\n",
+    "  let ?R = \"R\";\n",
+    "  \n",
+    "  assume \"trans_r R as\";\n",
+    "  from ?R have \"trans_r ?R as\" using trans_r_less_trans_reverses\n",
+    "    using trans_r_trans_reverses\n",
+    "  with ?as have \"b' \\<in> ?R\" by (rule trans_r_def)\n",
+    "  therefore \"b' = ?as\" by (unfold trans_r_def, blast);\n",
+    "  with ?as have \"b \\<in> ?rs ?as\" by (rule trans_r_def, intro rev_image_trans_r_inv R_def) (auto)\n",
+    "  then have \"b \\<in> ?as\" by (unfold trans_r_def, simp)\n",
+    "  hence \"b' = ?as\" by (unfold trans_r_def, blast)\n",
+    "  thus ?thesis by (rule refl)\n",
+    "qed\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "result = checker.check(theorem_and_sledgehammer_proof)\n",
+    "print(result['success'])\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "new = result.get(\"success\")\n",
+    "print(new)\n",
+    "rewards = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if result.get(\"success\", False):\n",
+    "    rewards.append(1.0)\n",
+    "else:\n",
+    "    rewards.append(0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rewards)"
    ]
   },
   {
