--- a/SFT.ipynb
+++ b/SFT.ipynb
@@ -262,7 +262,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "critic_model = \"Qwen/Qwen2.5-Coder-1.5B-Instruct\"\n",
+    "critic_model = \"deepseek-ai/DeepSeek-R1-Distill-Qwen-7B\"\n",
     "data_path = \"data/isabelle/train.jsonl\"\n",
     "output_path = \"qwen25-sft-1epoch-32b\"\n",
     "\n",
@@ -271,8 +271,8 @@
     "    \"--model_name_or_path\", critic_model,\n",
     "    \"--data_path\", data_path,\n",
     "    \"--output_dir\", output_path,\n",
-    "    \"--instruction_field\", \"critic_instruction\",\n",
-    "    \"--output_field\", \"critique\",\n",
+    "    \"--instruction_field\", \"natural_language_statement\",\n",
+    "    \"--output_field\", \"formal_proof\",\n",
     "    \"--num_train_epochs\", \"1\",\n",
     "    \"--model_max_length\", \"2048\",\n",
     "    \"--per_device_train_batch_size\", \"4\",\n",
