--- a/Preprocess_isabelle.ipynb
+++ b/Preprocess_isabelle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,16 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    os.makedirs(\"/data/isabelle\", exist_ok=True)\n",
     "    \n",
     "    # Load dataset\n",
     "    ds = load_dataset(\"kings-crown/Isabelle_SFT\", trust_remote_code=True)\n",
-    "    tokenizer = AutoTokenizer.from_pretrained(\"deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B\")\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(\"deepseek-ai/DeepSeek-R1-Distill-Qwen-7B\")\n",
     "\n",
     "    for split in ds.keys():\n",
     "        df = ds[split].to_pandas()\n",
@@ -143,7 +142,7 @@
     "\n",
     "        # Save to JSONL format\n",
     "        df.to_json(\n",
-    "            f\"scripts/data/isabelle/{split}.jsonl\",\n",
+    "            f\"{split}.jsonl\",\n",
     "            lines=True,\n",
     "            orient=\"records\",\n",
     "            force_ascii=False,\n",
